# hots

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  alibaba_run.sh  aw_run.sh  complete.csv  df_host_muffu.csv  docker-compose.yml  kmeans.ipynb  params.json  pyproject.toml  requirements.txt  run10.sh  run_alibaba.sh  run_bench.py  runs.sh  runs_alibaba.sh  runs_alibaba_bis.sh  setup.cfg  setup.py  tox.ini  vm_run.sh
Dashboard/: README.md  docker-compose.yml
cplex_installer/: ILOG_COS_20.10_LINUX_X86_64.bin.REMOVED.git-id  install.properties
data/generated_10/: container_usage.csv
data/generated_30/: container_usage.csv  node_meta.csv  node_usage.csv
data_extraction/: alibaba_short_time_interval_extraction.sh
doc/source/: business.rst  conf.py  developer.rst  glossary.rst  history.rst  index.rst  installation.rst  introduction.rst  legal.rst  outputs.rst  process.rst  pyomo.rst  streaming.rst  usermanual.rst
doc/source/_templates/: README.rst
doc/source/api/: allocation.rst  clustering.rst  container.rst  index.rst  init.rst  instance.rst  main.rst  model.rst  node.rst  placement.rst  plot.rst  tools.rst
hots/: __init__.py  cli.py
hots/config/: loader.py  sample_config_file.json  sample_config_kafka.json
hots/core/: app.py  instance.py  interfaces.py
hots/evaluation/: evaluator.py
hots/plugins/: __init__.py
hots/plugins/clustering/: builder.py  custom_spectral.py  hierarchical.py  kmeans.py  spectral.py
hots/plugins/connector/: file_connector.py  kafka_connector.py
hots/plugins/heuristic/: spread.py
hots/plugins/ingestion/: csv_reader.py  kafka_reader.py
hots/plugins/optimization/: factory.py  model.py  pyomo_model.py
hots/plugins/problem/: __init__.py  placement.py
hots/preprocessing/: tools.py
hots/reporting/: writer.py
hots/utils/: logging_config.py  signals.py  tools.py
hots/visualization/: plot.py
kang_dir/: constants.py  lpParse.py  lpParse_f.py  lpproject.py  test.py  test2.lp  test_lp.lp
rac/: __init__.py  allocation.py  clustering.py  container.py  init.py  instance.py  main.py  model.py  node.py  plot.py
src/: __init__.py
src/cots/: __init__.py  allocation.py  clustering.py  container.py  init.py  instance.py  main.py  model.py  model_cplex.py  model_cplex_clustering.py  model_pyomo.py  model_pyomo_clustering.py  model_small_cplex.py  model_small_pyomo.py  node.py  placement.py  plot.py  tools.py
src/hots/: __init__.py  allocation.py  clustering.py  container.py  data_stream.py  data_structures.py  init.py  instance.py  kafka.py  kafka_isolate.py  main.py  model.py  node.py  placement.py  plot.py  reader.py  tools.py
src/hots/back/: clustering.py  container.py  init.py  main.py  model.py  plot.py  reader.py
src/hots/core/models/: instance.py
src/rac/: __init__.py  allocation.py  clustering.py  container.py  init.py  instance.py  main.py  model.py  node.py  plot.py
tests/: conftest.py  conftest_back.py  moving_containers_test.json  params_default.json  test_main.py  test_packaging.py  test_placeholder.py
tests/alibaba_short_time_interval_test_data/: container_usage.csv  node_meta.csv  node_usage.csv  params.json  params_test.json
tests/contracts/: README.md
tests/data/: alibaba_params.json  params.json  params_alibaba.json  params_aw.json  vm_params.json
tests/data/alibaba18_10n/: container_usage.csv  node_meta.csv  node_usage.csv
tests/data/aw_05-03-21/: container_usage.csv  node_usage.csv  params.json
tests/data/aw_09-02-21/: container_usage.csv  node_meta.csv  node_usage.csv
tests/data/generated_10/: container_usage.csv  node_meta.csv  node_usage.csv  params.json
tests/data/generated_2/: container_usage.csv  node_usage.csv
tests/data/generated_25/: container_usage.csv  node_meta.csv  node_usage.csv
tests/data/generated_30/: container_usage.csv  node_usage.csv
tests/data/generated_30_bis/: container_usage.csv  node_meta.csv  node_usage.csv
tests/data/generated_4/: container_usage.csv  node_meta.csv  node_usage.csv  params.json
tests/data/generated_4_bis/: container_usage.csv
tests/data/generated_5/: container_usage.csv  node_usage.csv
tests/data/generated_7/: container_usage.csv  mock_container_usage.csv  node_meta.csv  node_usage.csv
tests/data/min_test_3/: container_usage.csv  node_meta.csv
tests/data/random_10/: container_usage.csv  node_usage.csv
tests/data/test_alloc1/: container_usage.csv  node_meta.csv  node_usage.csv
tests/data/test_alloc2/: node_meta.csv  node_usage.csv
tests/data/thesis_ex_10/: container_usage.csv  mock_container_usage.csv  node_meta.csv  node_usage.csv  params.json
tests/e2e/: README.md  test_thesis_ex_10.py
tests/integration/: test_api.py
tests/perf/: test_perf.py
tests/unit/: test_clustering_builder.py  test_example.py  test_utils_build_df_from_containers.py
