# ==================================
# Setuptools and tools configuration
# ==================================
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = cots
version = file:VERSION.txt
description = Resource Allocation via Clustering
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    Resource
    Optimisation
    Clustering
    Planning
license = MIT
license_files = LICENSE.txt
platform = any

# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Topic :: System :: Filesystems
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications
    Environment :: MacOS X
    Operating System :: POSIX
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis

author = AlterWay R&D team
author_email = rnd@alterway.fr
url = https://git.rnd.alterway.fr/overboard/soft_clustering/rac

[options]
python_requires = >=3.8
install_requires =
    click
    docplex
    matplotlib
    networkx
    numpy
    pandas
    plotly
    pyomo
    scipy
    sklearn
    tqdm

zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
tests_require =
    pytest

[options.packages.find]
where = src

[options.data_files]
. = VERSION.txt

[options.extras_require]
# Development / test tools
dev =
    pytest
    flake8
    flake8-comprehensions
    flake8-docstrings
    flake8-quotes
    flake8-import-order
    pep8-naming
doc =
    Sphinx

[options.entry_points]
console_scripts =
    cots = cots.main:main

[bdist_wheel]
universal = true

[flake8]
max-complexity = 10
max-line-length = 100
ignore =
        D205
        D400
        W503
exclude =
        .git,
        __pycache__,
        .tox,
        .eggs,
        *.egg,
        build,
        venv

[tool:pytest]
testpaths = tests
addopts = --verbosity=2
