# ==================================
# Setuptools and tools configuration
# ==================================
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = hots
version = file:VERSION.txt
description = Resource Allocation via Clustering
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    Resource
    Optimisation
    Clustering
    Planning
license = MIT
license_files = LICENSE.txt
platform = any

# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    # Topic :: System :: Filesystems
    Development Status :: 2 - Pre-Alpha
    # Environment :: X11 Applications
    # Environment :: MacOS X
    Operating System :: POSIX
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

author = Smile R&D team
author_email = rnd@smile.fr
url = https://github.com/Smile-SA/hots

[options]
python_requires = >=3.10
install_requires =
    click
    clusopt_core
    matplotlib
    networkx
    numpy>=1.24.2
    pandas>=1.5.3
    plotly
    pyomo
    scipy>=1.10.0
    scikit-learn>=1.2.1
    tqdm

zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
tests_require =
    pytest

[options.packages.find]
where = src

[options.data_files]
. = VERSION.txt

[options.extras_require]
# Development / test tools
dev =
    pytest
    flake8
    flake8-comprehensions
    flake8-docstrings
    flake8-quotes
    flake8-import-order
    pep8-naming
doc =
    Sphinx

[options.entry_points]
console_scripts =
    hots = hots.main:main

[bdist_wheel]
universal = true

[flake8]
max-complexity = 10
max-line-length = 100
ignore =
        D205
        D400
        W503
exclude =
        .git,
        __pycache__,
        .tox,
        .eggs,
        *.egg,
        build,
        venv

[tool:pytest]
testpaths = tests
addopts = --verbosity=2
